src/test/testData/AnnotatorDuplicateProperty.klass
package example

class User
{
    <error descr="Duplicate property 'name'">name</error>: String key;
    email: String;
    <error descr="Duplicate property 'name'">name</error>: Integer;
}
